Featured gallery z-index fix

--- a/sass/homepage.scss
+++ b/sass/homepage.scss
@@ -51,7 +51,7 @@
   position: relative;
   flex: 0 1 25%;
   position: relative;
-  z-index: 1;
+  z-index: 0;
   padding-bottom: 5px;
 
   img {
